# openapi-from-source

./: CHANGELOG.md  Cargo.toml  README.md  prompts.md
.kiro/specs/rust-openapi-generator/: design.md  requirements.md  tasks.md
docs/: response-type-extraction.md
src/: cli.rs  detector.rs  error.rs  lib.rs  main.rs  openapi_builder.rs  parser.rs  scanner.rs  schema_generator.rs  serializer.rs  type_resolver.rs
src/extractor/: actix.rs  axum.rs  mod.rs
tests/: cross_file_test.rs  integration_test.rs
tests/fixtures/: actix_project.rs  axum_project.rs
